$Id$

User-visible changes in version 0.8.6  (2008-04-15):
* minimum wxWidgets version is now 2.8.0
* fityk license was changed from GPLv2 to GPLv2/3 (ver. 2 or at your option 3)
* added syntax for loading data from all columns in file: file.csv:1,2..::

User-visible changes in version 0.8.6  (2008-04-15):
* bug fixes (drawing baseline, "zoom all" with log scale)
* GUI: parameters (at the bottom of the sidebar) can be changed with Page-Up
  and Page-Down keys or with mouse wheel. Shift, Ctrl, Alt keys modify speed.
* GUI: two buttons added to the "functions" pane in the sidebar. They make 
  HWHM and shape equal for all functions (works only with a few function types)

User-visible changes in version 0.8.5  (2008-03-17):
* minor changes in syntax: 
    info @0             ->   info data in @0
    info @0.title       ->   info title in @0
    info @0.filename    ->   info filename in @0
    @0.title = abc      ->   set @0.title = abc
    @+                  ->   @+ = 0
    @0.revert           ->   @0 < .
   data is exported with "info" now: info @n ( expr1, ... ) > filename
     where: columns have to be given, @* can be used, F() and Z() can 
            be used without "@n." prefix,  *F() can not be used.
* xylib: RIET7/LHPM/CSRIET/ILL_D1A5/PSI_DMC .dat filetypes added
* non-Windows platforms: using HTML manual (in default browser) instead of HTB
* GUI: command line history is stored in ~/.fityk/history
* --disable-3rdparty configure flag prevents building with xylib from 3rdparty/
* GUI: added Session -> Save as Image
* !foo: executes a command foo by calling system() (from stdlib.h)
* bug fixes (there are some bug fixes in every release)
* xyConvert tool (can be built only with wxWidgets >= 2.9)

User-visible changes in version 0.8.4  (2008-02-15):
* xylib: pdCIF format was added

User-visible changes in version 0.8.3  (2008-01-25):
* data import is done using (modified) xylib library. 
  VAMAS and a few other new file formats are supported.