@@ -212,5 +212,20 @@ class FuncValente : public Function
     fp center() const { return vv[3]; }
 };
 
+class FuncLogNormal : public Function
+{
+    DECLARE_FUNC_OBLIGATORY_METHODS(LogNormal)
+    void more_precomputations();
+    bool get_nonzero_range (fp level, fp &left, fp &right) const;  
+    fp center() const { return vv[1]; }
+    bool has_height() const { return true; } 
+    fp height() const { return vv[0]; }
+    bool has_fwhm() const { return true; } 
+    fp fwhm() const   { return fabs(vv[2]); }
+    bool has_area() const { return true; } 
+    fp area() const   { return vv[0]/sqrt(M_LN2/M_PI)
+        /(2.0/vv[2])/exp(-vv[3]*vv[3]/4.0/M_LN2); }
+};
+
 
 #endif 
